syntax = "proto3";
package procsearch;

service ProcSearchService {
  rpc proc_info (ProcInfoRequest) returns (ProcInfoResponse);
}

message ProcInfoRequest {
  int32 pid = 1;
}

message ProcInfoResponse {
  int32 pid = 1;
  string command = 2;
  repeated string args = 3;
}
